<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinancialHub.FinancialHubActivity">

    <!--   Graph API-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="102dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="#DDDDDD"
            android:gravity="center_vertical"

            app:srcCompat="@drawable/chart_icon_foreground" />

        <TextView
            android:layout_width="292dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="#DDDDDD"
            android:gravity="center_vertical"
            android:text="@string/expenditure_preview_title"

            android:textColor="#2196F3"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="#DDDDDD"
            android:gravity="center_vertical"
            />
    </LinearLayout>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/previewExpChart"
        android:layout_width="342dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <Button
        android:id="@+id/manage_finances"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="104dp"
        android:background="@color/gray"
        android:clickable="true"
        android:enabled="true"
        android:onClick="switchToImportScreen"
        android:text="@string/manage_finances"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/import_transactions"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:background="@color/gray"
        android:clickable="true"
        android:enabled="true"
        android:onClick="switchToImportScreen"
        android:text="@string/import_transactions"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_goals"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="160dp"
        android:background="@color/gray"
        android:clickable="true"
        android:enabled="true"
        android:onClick="switchToGoalsScreen"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/set_goals"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
