<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinancialHub.LoadTransactions">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"


        android:selectAllOnFocus="true"
        android:text="@string/load_transactions"
        android:textColor="#2196F3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/import_file_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:enabled="true"
        android:onClick="fireFileExplorer"
        android:text="@string/load_local_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/set_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:enabled="true"
        android:text="@string/manually_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:background="#DDDDDD"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="121dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="57dp"
        android:layout_height="39dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/folder_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="41dp"
        android:layout_height="65dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/form_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>